test/input/error/IncompatibleOperands1.source
program IncompatibleOperands1;
methods
sdohtem;
declare
real r = 1.5
eralced;
r = r * 3
margorp;